--- a/public/index.html
+++ b/public/index.html
@@ -1,65 +1,143 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/4.10.1/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/4.10.1/firebase-auth.js"></script>
-    <script defer src="/__/firebase/4.10.1/firebase-database.js"></script>
-    <script defer src="/__/firebase/4.10.1/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/4.10.1/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+  <title>My Weather</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDRpVlI2zW8HsqEpNtmKEAqI-gEFcexCCQ",
+      authDomain: "my-weather-4d596.firebaseapp.com",
+      databaseURL: "https://my-weather-4d596.firebaseio.com",
+      projectId: "my-weather-4d596",
+      storageBucket: "my-weather-4d596.appspot.com",
+      messagingSenderId: "270011803371"
+    };
+    firebase.initializeApp(config);
+  </script>
+
+  <script src="js/utils.js" type="text/javascript"></script>
+  <script src="js/dom.js" type="text/javascript"></script>
+  <script src="js/parse.js" type="text/javascript"></script>
+  <script src="js/api.js" type="text/javascript"></script>
+  <script src="js/app.js" type="text/javascript"></script>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+    <div class="fa-layers fa-fw" id="home-btn">
+      <i class="fas fa-home fa-2x"></i>
+      <span class="fa-layers-text" data-fa-transform="down-28"></span>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+    <h2 class="ml-auto mr-auto">My Weather</h2>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="options.html">Options</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container-fluid" id="home-page">
+    <div class="row">
+      <div class="col-12" id="alerts"></div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="container">
+          <div class="row">
+            <div class="col-7">
+              <h1 id="current-temperature"></h1>
+              <div class="container">
+                <div class="row">
+                  <div class="col-2">&nbsp;</div>
+                  <div class="col-4">High</div>
+                  <div class="col-5" id="high-temp"></div>
+                </div>
+                <div class="row">
+                  <div class="col-2">&nbsp;</div>
+                  <div class="col-4">Low</div>
+                  <div class="col-5" id="low-temp"></div>
+                </div>
+              </div>
+            </div>
+            <div class="col-5">
+              <div id="weather-image">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="container" id="today">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="container" id="five-day">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid collapse" id="search-page">
+    <h1>Search Page</h1>
+  </div>
+  <div class="container-fluid collapse" id="planner-page">
+    <h1>Planner Page</h1>
+  </div>
+  <div class="container-fluid collapse" id="radar-page">
+    <h1>Radar Page</h1>
+  </div>
+  <div class="container-fluid collapse" id="alerts-page">
+    <h1>Alerts Page</h1>
+  </div>
+  <footer class="footer">
+    <div class="container">
+      <div class="row align-items-center justify-content-around">
+        <div class="col-xs-3">
+          <div class="fa-layers fa-fw" id="search-btn">
+            <i class="fas fa-search fa-2x"></i>
+            <span class="fa-layers-text" data-fa-transform="down-28 right-7">Search</span>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="fa-layers fa-fw" id="planner-btn">
+            <i class="fas fa-globe fa-2x"></i>
+            <span class="fa-layers-text" data-fa-transform="down-28 right-5">Planner</span>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="fa-layers fa-fw" id="radar-btn">
+            <i class="fas fa-cloud fa-2x"></i>
+            <span class="fa-layers-text" data-fa-transform="down-28 right-12">Radar</span>
+          </div>
+        </div>
+        <div class="col-xs-3">
+          <div class="fa-layers fa-fw" id="alerts-btn">
+            <i class="fas fa-bell fa-2x"></i>
+            <span class="fa-layers-text" data-fa-transform="down-28 right-5">Alerts</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</body>
 
-        try {
-          let app = firebase.app();
-          let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-          document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
 </html>
