--- a/public/index.html
+++ b/public/index.html
@@ -78,9 +78,12 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="container">
-          <div class="row justify-content-between" id="five-day">
-
+        <div class="container mx-auto" id="five-day">
+          <div class="row">
+            <div class="container-fluid">
+              <h5 id="five-day-title"></h5>
+              <div class="row justify-content-between" id="future-forecast"></div>
+            </div>
           </div>
         </div>
       </div>
