--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="container">
+        <div class="container" id="radar-image">
         </div>
       </div>
     </div>
