--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
+
   <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
   <script>
     // Initialize Firebase
@@ -137,13 +140,13 @@
     <div class="container">
       <div class="row align-items-center justify-content-around">
         <div class="col-xs-3">
-          <div class="fa-layers fa-fw" id="search-btn">
+          <div class="fa-layers fa-fw" id="search-btn" data-toggle="modal" data-target="#locationModal">
             <i class="fas fa-search fa-2x"></i>
             <span class="fa-layers-text" data-fa-transform="down-28 right-7">Search</span>
           </div>
         </div>
         <div class="col-xs-3">
-          <div class="fa-layers fa-fw" id="planner-btn">
+          <div class="fa-layers fa-fw" id="planner-btn" data-toggle="modal" data-target="#dateRangeModal">
             <i class="fas fa-globe fa-2x"></i>
             <span class="fa-layers-text" data-fa-transform="down-28 right-5">Planner</span>
           </div>
@@ -163,6 +166,57 @@
       </div>
     </div>
   </footer>
+
+
+  <!-- Modal -->
+  <div class="modal fade" id="locationModal" tabindex="-1" role="dialog" aria-labelledby="locationModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="locationModalLabel">Enter Location</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Dismiss">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="location">Location</label>
+            <input type="text" class="form-control" id="location" placeholder="Enter City Name" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Dismiss</button>
+          <button type="submit" class="btn btn-primary" id="location-btn">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="dateRangeModal" tabindex="-1" role="dialog" aria-labelledby="dateRangeModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="dateRangeModalLabel">Select Date Range</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Dismiss">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="start-date">Start Date</label>
+            <input id="start-date" name="start-date" placeholder="MM/DD/YYY" type="text" required>
+          </div>
+          <div class="form-group">
+            <label for="end-date">End Date</label>
+            <input id="end-date" name="end-date" placeholder="MM/DD/YYY" type="text" required>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Dismiss</button>
+          <button type="submit" class="btn btn-primary" id="date-range-btn">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
