--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="container">
+        <div class="container" id="chart">
         </div>
       </div>
     </div>
