--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     firebase.initializeApp(config);
   </script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js" type="text/javascript"></script>
+
   <script src="js/utils.js" type="text/javascript"></script>
   <script src="js/dom.js" type="text/javascript"></script>
   <script src="js/parse.js" type="text/javascript"></script>
@@ -109,7 +111,8 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <div class="container" id="chart">
+        <div class="container" id="chart-segment">
+          <canvas id="chart" width="400" height="300"></canvas>
         </div>
       </div>
     </div>
