--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,10 @@
       <span class="fa-layers-text" data-fa-transform="down-28"></span>
     </div>
     <h2 class="ml-auto mr-auto">My Weather</h2>
-    <img src="images/wunderground_logo.png" class="wunderground-logo">
+    <a href="https://www.wunderground.com/">
+      <img src="images/wunderground_logo.png" class="wunderground-logo">
+    </a>
+
     <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
