--- a/public/test/index.html
+++ b/public/test/index.html
@@ -12,11 +12,14 @@
 <body>
   <div id="mocha"></div>
   <script src="mocha.js"></script>
-  <script src="../node_modules/chai/chai.js" charset="utf-8" type="text/javascript">
+  <script src="chai.js" charset="utf-8" type="text/javascript">
     < script > mocha.setup('bdd');
   </script>
-  <script src="../js/app.js" type="text/javascript"></script>
-  <script src="../js/api.js" type="text/javascript"></script>
+  <script src="js/utils.js" type="text/javascript"></script>
+  <script src="js/dom.js" type="text/javascript"></script>
+  <script src="js/parse.js" type="text/javascript"></script>
+  <script src="js/api.js" type="text/javascript"></script>
+  <script src="js/app.js" type="text/javascript"></script>
   <script src="tests.js"></script>
   <script>
     mocha.run();
