--- a/public/test/index.html
+++ b/public/test/index.html
@@ -11,15 +11,22 @@
 
 <body>
   <div id="mocha"></div>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
   <script src="mocha.js"></script>
-  <script src="chai.js" charset="utf-8" type="text/javascript">
-    < script > mocha.setup('bdd');
+  <script src="chai.js" charset="utf-8" type="text/javascript"></script>
+  <script>
+    mocha.setup('bdd');
   </script>
-  <script src="js/utils.js" type="text/javascript"></script>
-  <script src="js/dom.js" type="text/javascript"></script>
-  <script src="js/parse.js" type="text/javascript"></script>
-  <script src="js/api.js" type="text/javascript"></script>
-  <script src="js/app.js" type="text/javascript"></script>
+  <script src="../js/utils.js" type="text/javascript"></script>
+  <script src="../js/dom.js" type="text/javascript"></script>
+  <script src="../js/parse.js" type="text/javascript"></script>
+  <script src="../js/api.js" type="text/javascript"></script>
+  <script src="sample_data/Alert_Cedarvale.json" type="text/javascript"></script>
+  <script src="sample_data/CurrentWeather_Boulder.json" type="text/javascript"></script>
+  <script src="sample_data/HistoricalSummary_Boulder.json" type="text/javascript"></script>
+  <script src="sample_data/OneDay_Forecast_Boulder.json" type="text/javascript"></script>
+  <script src="sample_data/HistoricalWeather_Boulder.json" type="text/javascript"></script>
+  <script src="sample_data/TenDay_Forecast_Boulder.json" type="text/javascript"></script>
   <script src="tests.js"></script>
   <script>
     mocha.run();
