--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       <span class="fa-layers-text" data-fa-transform="down-28"></span>
     </div>
     <h2 class="ml-auto mr-auto">My Weather</h2>
-    <a href="https://www.wunderground.com/">
+    <a target="_blank" href="https://www.wunderground.com/">
       <img src="images/wunderground_logo.png" class="wunderground-logo">
     </a>
 
